 - Bugfix: CGroupBehaviors no longer forwards actions to DockStations if these DockStations do not support the action.
 ! API: The property telling whether the user can see a Dockable is now called "showing" and no longer "dockable-visible". This should prevent more confusion about "visibility" vs "true visibility" (the later term is no longer to be used, its now "showing").
 - API: The new property SplitDockStation.DIVIDER_STRATEGY and the interface SplitDividerStrategy allow a client to specify a custom algorithm for resizing the children of a SplitDockStation
 - Bugfix/API: Yet another update to the focus system: focus is now handled by "FocusRequest" objects. One request wins, the others get canceled. The system refuses to grant focus to an invalid component (e.g. one that is not visible) if there are still requests pending. 

[v1.1.1p5c]
 - API: DockRelocator offers a method "cancel" to cancel any DnD operation at any time.
 - API: ScreenDockWindow now closes and reopens its ScreenDockWindows if the owner window (the root window) changed. This way the windows stay open if the client switches to a new root frame.
 ! API: In order to prevent focus stealing ScreenDockWindow has a new method "setPreventFocusStealing". This method is only used if the root window changed. Focus stealing prevention is unset after ScreenDockStation.PREVENT_FOCUS_STEALING_DELAY milliseconds.
 - API: New CStationContainerHistoryRewriter tries to ensure that a CDockable stays on the same CStationContainer as long as possible.
  
[Todo]
- DockActions/Tabs: assign priority to elements; more important elements stay longer on screen if there is not enough space for all elements
- Drop StackDockStation over Dockable and merge them
- EclipseTheme: Drop Dockable over Dockable and allow to select which Dockable has which index in the new StackDockStation.
- SingleParentRemover: Implement bugfix as described in the file